--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@
 
 
 .cards-container {
-  width: 85%;
+  width: fit-content;
   height: 150vh;
   display: flex;
   flex-wrap: wrap;
@@ -131,13 +131,20 @@
 }
 
 .card {
-  width: 320px;
+  width: 280px;
   margin-bottom: 40px;
   cursor: pointer;
   margin-block: 1rem;
   margin-inline: 3rem;
 }
 
+.large-card {
+  width: 340px;
+  margin-bottom: 40px;
+  cursor: pointer;
+  margin-block: 1rem;
+  margin-inline: 3rem;
+}
 .thumbnail {
   width: 100%;
   height: auto;
@@ -182,4 +189,8 @@
   font-size: 14px;
   color: #606060;
   margin-top: 2px;
+}
+
+a {
+  all: unset; /* Resets all properties to their initial or inherited values */
 }
